tests/unit/default/syntax-error/076-create-table-dot-column-after.e.t
---- IN ----
+%table.name:int>
---- OUT ----
---- ERR ----
syntax: expected <name> after `....name:int>` instead of EOL at position 17 - at line 1
---- EXIT ----
1
